# yandex-handbook-cpp

./: CMakeLists.txt  btests.cpp  function.hpp  tests.cpp  tsk-211.cpp  tsk-211.txt  tsk-212.cpp  tsk-221.cpp  tsk-222.cpp  tsk-241.cpp  tsk-242.cpp  tsk-244.cpp  tsk-411.cpp
